// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register 1`] = `
<div>
  <div>
    <div>
      <Image
        aspectRatio={1}
        uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
      />
      <div>
        Daily Universal Register
      </div>
      <TileS />
      <div />
      <TileS />
      <div />
      <Image
        aspectRatio={1}
        uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
      />
      <TileS />
      <div />
      <Image
        aspectRatio={1}
        uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
      />
      <TileS />
    </div>
  </div>
</div>
`;

exports[`1. secondary one and four 1`] = `
<div>
  <div>
    <div>
      <div>
        <TheSTLogo
          height={40}
          width={60}
        />
      </div>
      <div />
      <div>
        <div>
          <div>
            <TileN
              breakpoint="wide"
              tileName="secondary"
            />
          </div>
        </div>
        <div />
        <div>
          <div>
            <TileO
              tileName="support1"
            />
          </div>
          <div />
          <div>
            <TileO
              tileName="support3"
            />
          </div>
        </div>
        <div />
        <div>
          <div>
            <TileO
              tileName="support2"
            />
          </div>
          <div />
          <div>
            <TileO
              tileName="support4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`1. secondary one and four 2`] = `
<div>
  <div>
    <div>
      <div>
        <TheTimesLogo
          height={40}
          width={42}
        />
      </div>
      <div />
      <div>
        <div>
          <div>
            <TileN
              breakpoint="wide"
              tileName="secondary"
            />
          </div>
        </div>
        <div />
        <div>
          <div>
            <TileO
              tileName="support1"
            />
          </div>
          <div />
          <div>
            <TileO
              tileName="support3"
            />
          </div>
        </div>
        <div />
        <div>
          <div>
            <TileO
              tileName="support2"
            />
          </div>
          <div />
          <div>
            <TileO
              tileName="support4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. lead one full width 1`] = `
<div>
  <TileR
    breakpoint="wide"
    tileName="lead"
  />
</div>
`;

exports[`2. leaders 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.4}
      uri="https://www.thetimes.co.uk/d/img/logos/sundaytimes-with-crest-black-53d6e31fb8.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <TileAG
          breakpoint="wide"
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileAG
          breakpoint="wide"
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileAG
          breakpoint="wide"
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`2. leaders 2`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <TileAG
          breakpoint="wide"
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileAG
          breakpoint="wide"
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileAG
          breakpoint="wide"
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`3. lead one and one 1`] = `
<div>
  <div>
    <div>
      <TileU
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`4. lead one and four 1`] = `
<div>
  <div>
    <div>
      <TileAC
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        breakpoint="wide"
        tileName="support1"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support2"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support3"
      />
      <div />
      <TileAD
        breakpoint="wide"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`5. standard 1`] = `
<div>
  <div>
    <div>
      <TileK
        breakpoint="wide"
      />
      <div />
      <TileK
        breakpoint="wide"
      />
      <div />
      <TileK
        breakpoint="wide"
      />
      <div />
      <TileK
        breakpoint="wide"
      />
      <div />
      <TileK
        breakpoint="wide"
      />
    </div>
  </div>
</div>
`;

exports[`6. lead two no pic and two 1`] = `
<div>
  <div>
    <div>
      <TileX
        tileName="lead1"
      />
      <div />
      <TileY
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileAL
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileZ
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`7. secondary one 1`] = `
<div>
  <TileW
    breakpoint="wide"
    tileName="secondary"
  />
</div>
`;

exports[`8. secondary one and columnist 1`] = `
<div>
  <div>
    <div>
      <TileAB
        breakpoint="wide"
        tileName="columnist"
      />
    </div>
    <div />
    <div>
      <TileB
        breakpoint="wide"
        tileName="secondary"
      />
    </div>
  </div>
</div>
`;

exports[`9. secondary four 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`10. secondary one and four 1`] = `
<div>
  <div>
    <div>
      <div>
        <TheTimesLogo
          height={40}
          width={42}
        />
      </div>
      <div />
      <div>
        <div>
          <div>
            <TileN
              breakpoint="wide"
              tileName="secondary"
            />
          </div>
        </div>
        <div />
        <div>
          <div>
            <TileO
              tileName="support1"
            />
          </div>
          <div />
          <div>
            <TileO
              tileName="support3"
            />
          </div>
        </div>
        <div />
        <div>
          <div>
            <TileO
              tileName="support2"
            />
          </div>
          <div />
          <div>
            <TileO
              tileName="support4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`11. secondary two and two 1`] = `
<div>
  <div>
    <div>
      <TileAM
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAN
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileAM
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileAN
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`12. secondary two no pic and two 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAP
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileAP
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`13. list two and six no pic 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="lead1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileL
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileL
            tileName="support2"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileL
            tileName="support3"
          />
        </div>
        <div />
        <div>
          <TileL
            tileName="support4"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileL
            tileName="support5"
          />
        </div>
        <div />
        <div>
          <TileL
            tileName="support6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`14. leaders 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <TileAG
          breakpoint="wide"
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileAG
          breakpoint="wide"
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileAG
          breakpoint="wide"
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`15. comment lead and cartoon 1`] = `
<div>
  <div>
    <div>
      <TileAH
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAI
        tileName="cartoon"
      />
    </div>
  </div>
</div>
`;

exports[`16. puzzle 1`] = `
<div>
  <div>
    <div>
      <TileAK
        breakpoint="wide"
        id="0"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div>
      <TileAK
        breakpoint="wide"
        id="1"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div>
      <TileAK
        breakpoint="wide"
        id="2"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
  </div>
</div>
`;
